<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <Button

            android:text="@string/login"
            android:layout_width="130dp"
            android:background="@drawable/custom_login_button"
            android:layout_height="40dp" android:id="@+id/loginButton"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="60dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="50dp"/>
    <Button
            android:text="@string/registration"
            android:layout_width="130dp"
            android:background="@drawable/custom_register_button"
            android:layout_height="40dp" android:id="@+id/registrationButton"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="60dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="50dp"/>
    <EditText
            android:layout_width="290dp"
            android:layout_height="50dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:background="@drawable/custom_input"
            android:id="@+id/usernameField"
            android:drawableStart="@drawable/custom_username_icon"
            style="@style/Widget.AppCompat.AutoCompleteTextView"
            android:singleLine="true" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/passwordField" android:layout_marginBottom="40dp"
            android:hint="@string/username" android:autofillHints="" app:layout_constraintHorizontal_bias="0.504"/>
    <EditText
            android:layout_width="290dp"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:ems="10"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/custom_lock_icon"
            android:id="@+id/passwordField"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:hint="@string/password" android:layout_marginBottom="108dp"
            app:layout_constraintBottom_toTopOf="@+id/loginButton" android:autofillHints=""/>
    <ImageView
            android:layout_width="195dp"
            android:layout_height="173dp" app:srcCompat="@drawable/ic_custom_logo" android:id="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/usernameField" android:layout_marginBottom="60dp"
            android:contentDescription="@string/logo" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="31dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>