<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <Button
            android:text="@string/login"
            android:layout_width="290dp"
            android:background="@drawable/custom_login_button"
            android:layout_height="50dp" android:id="@+id/loginButtonWithCode"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="204dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"/>
    <EditText
            android:layout_width="290dp"
            android:layout_height="50dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:background="@drawable/custom_input"
            android:id="@+id/totpField"
            android:drawableStart="@drawable/custom_lock_icon"
            style="@style/Widget.AppCompat.AutoCompleteTextView"
            android:singleLine="true" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:hint="@string/totpCode" android:autofillHints="" app:layout_constraintHorizontal_bias="0.504"
            android:layout_marginBottom="35dp" app:layout_constraintBottom_toTopOf="@+id/loginButtonWithCode"/>
    <ImageView
            android:layout_width="195dp"
            android:layout_height="173dp" app:srcCompat="@drawable/ic_custom_logo" android:id="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/totpField" android:layout_marginBottom="60dp"/>
    <TextView
            android:text="@string/enterTotpCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView"
            android:layout_marginBottom="12dp"
            app:layout_constraintBottom_toTopOf="@+id/totpField"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>