<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:id="@+id/profile_fragment">
    <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp" app:srcCompat="@drawable/ic_settings" android:id="@+id/settingsButton"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/settingsicon" android:layout_marginTop="8dp"/>
    <ImageView
            android:layout_width="195dp"
            android:layout_height="173dp" app:srcCompat="@drawable/ic_custom_logo" android:id="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/logo" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="31dp"/>
    <ScrollView
            android:layout_width="409dp"
            android:layout_height="352dp" android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
    >
        <RelativeLayout android:layout_width="match_parent"
                        android:layout_height="wrap_content">
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:layout_centerInParent="true"
                          android:layout_marginTop="20dp"
                          android:layout_marginLeft="30dp"
                          android:layout_marginRight="30dp"
                          android:orientation="vertical">
                <LinearLayout android:layout_width="match_parent"
                              android:layout_height="match_parent"
                              android:orientation="vertical">
                    <TextView android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:text="@string/email_"
                              android:textColor="@color/colorPrimary"
                              android:fontFamily="serif"
                              android:textSize="13sp"/>
                    <TextView android:layout_width="wrap_content"
                              android:id="@+id/userEmail"
                              android:layout_height="wrap_content"
                              android:fontFamily="serif"
                              android:text="@string/test"
                              android:textSize="18sp"
                              android:textColor="@android:color/black"
                    />
                    <View android:layout_width="match_parent"
                          android:layout_height="1dp"
                          android:layout_marginTop="15dp"
                    android:background="@android:color/darker_gray"/>

                </LinearLayout>
                <LinearLayout android:layout_width="match_parent"
                              android:layout_height="match_parent"
                              android:orientation="vertical">
                    <TextView android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:text="@string/username_"
                              android:fontFamily="serif"
                              android:textColor="@color/colorPrimary"
                              android:textSize="13sp"/>
                    <TextView android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:id="@+id/username"
                              android:fontFamily="serif"
                              android:text="@string/test"
                              android:textSize="18sp"
                              android:textColor="@android:color/black"
                    />
                    <View android:layout_width="match_parent"
                          android:layout_height="1dp"
                          android:layout_marginTop="15dp"
                          android:background="@android:color/darker_gray"/>

                </LinearLayout>
                <LinearLayout android:layout_width="match_parent"
                              android:layout_height="match_parent"
                              android:orientation="vertical">
                    <TextView android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:text="@string/points_number"
                              android:fontFamily="serif"
                              android:textColor="@color/colorPrimary"
                              android:textSize="13sp"/>
                    <TextView android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:id="@+id/pointsNumber"
                              android:fontFamily="serif"
                              android:text="@string/test"
                              android:textSize="18sp"
                              android:textColor="@android:color/black"
                    />
                    <View android:layout_width="match_parent"
                          android:layout_height="1dp"
                          android:layout_marginTop="15dp"
                          android:background="@android:color/darker_gray"/>

                </LinearLayout>
                <LinearLayout android:layout_width="match_parent"
                              android:layout_height="match_parent"
                              android:orientation="vertical">
                    <TextView android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:text="@string/using2FA"
                              android:textColor="@color/colorPrimary"
                              android:fontFamily="serif"
                              android:textSize="13sp"/>
                    <TextView android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:id="@+id/using2FA"
                              android:fontFamily="serif"
                              android:text="@string/test"
                              android:textSize="18sp"
                              android:textColor="@android:color/black"
                    />
                    <View android:layout_width="match_parent"
                          android:layout_height="1dp"
                          android:layout_marginTop="15dp"
                          android:background="@android:color/darker_gray"/>

                </LinearLayout>
                <LinearLayout android:layout_width="match_parent"
                              android:layout_height="match_parent"
                              android:orientation="vertical">
                    <TextView android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:text="@string/cardsNumber"
                              android:fontFamily="serif"
                              android:textColor="@color/colorPrimary"
                              android:textSize="13sp"/>
                    <TextView android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:id="@+id/cardsNumber"
                              android:fontFamily="serif"
                              android:text="@string/test"
                              android:textSize="18sp"
                              android:textColor="@android:color/black"
                    />
                    <View android:layout_width="match_parent"
                          android:layout_height="1dp"
                          android:layout_marginTop="15dp"
                          android:background="@android:color/darker_gray"/>

                </LinearLayout>


            </LinearLayout>

        </RelativeLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>