<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:id="@+id/cards_fragment">
    <ImageView
            android:layout_width="195dp"
            android:layout_height="173dp" app:srcCompat="@drawable/ic_custom_logo" android:id="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/logo" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="31dp"/>

    <ImageView
            android:id="@+id/image_barcode"
            android:layout_width="@dimen/width_barcode"
            android:layout_height="150dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            android:layout_marginBottom="25dp" app:layout_constraintBottom_toTopOf="@+id/text_barcode_number"
            android:layout_marginTop="18dp" app:layout_constraintTop_toBottomOf="@+id/textView3"
            android:contentDescription="@string/barcode"/>
    <TextView
            android:id="@+id/text_barcode_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_barcode"
            tools:text="1234 65290 9855 65252" app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/moja_karta_programu_lojalno_ciowego"
            android:layout_width="wrap_content"
            android:fontFamily="serif"
            android:textColor="@android:color/black"
            android:layout_height="wrap_content" android:id="@+id/textView3"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" android:layout_marginBottom="18dp"
            app:layout_constraintBottom_toTopOf="@+id/image_barcode" app:layout_constraintVertical_bias="0.636"
            android:textSize="22sp" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>